@@ -235,67 +235,6 @@ void	DBstatement_prepare(const char *sql)
 		}
 	}
 }
-
-/******************************************************************************
- *                                                                            *
- * Function: DBbind_parameter                                                 *
- *                                                                            *
- * Purpose: creates an association between a program variable and             *
- *          a placeholder in a SQL statement                                  *
- *                                                                            *
- * Comments: retry until DB is up                                             *
- *                                                                            *
- ******************************************************************************/
-void	DBbind_parameter(int position, void *buffer, unsigned char type)
-{
-	int	rc;
-
-	rc = zbx_db_bind_parameter(position, buffer, type);
-
-	while (ZBX_DB_DOWN == rc)
-	{
-		DBclose();
-		DBconnect(ZBX_DB_CONNECT_NORMAL);
-
-		if (ZBX_DB_DOWN == (rc = zbx_db_bind_parameter(position, buffer, type)))
-		{
-			zabbix_log(LOG_LEVEL_ERR, "database is down: retrying in %d seconds", ZBX_DB_WAIT_DOWN);
-			connection_failure = 1;
-			sleep(ZBX_DB_WAIT_DOWN);
-		}
-	}
-}
-
-/******************************************************************************
- *                                                                            *
- * Function: DBstatement_execute                                              *
- *                                                                            *
- * Purpose: executes a SQL statement                                          *
- *                                                                            *
- * Comments: retry until DB is up                                             *
- *                                                                            *
- ******************************************************************************/
-int	DBstatement_execute()
-{
-	int	rc;
-
-	rc = zbx_db_statement_execute();
-
-	while (ZBX_DB_DOWN == rc)
-	{
-		DBclose();
-		DBconnect(ZBX_DB_CONNECT_NORMAL);
-
-		if (ZBX_DB_DOWN == (rc = zbx_db_statement_execute()))
-		{
-			zabbix_log(LOG_LEVEL_ERR, "database is down: retrying in %d seconds", ZBX_DB_WAIT_DOWN);
-			connection_failure = 1;
-			sleep(ZBX_DB_WAIT_DOWN);
-		}
-	}
-
-	return rc;
-}
 #endif
 
 /******************************************************************************
@@ -2456,6 +2395,9 @@ int	zbx_db_insert_execute(zbx_db_insert_t *self)
 	char		*sql_values = NULL;
 	size_t		sql_values_alloc = 0, sql_values_offset = 0;
 #	endif
+#else
+	zbx_db_bind_context_t	*contexts;
+	int			rc, tries = 0;
 #endif
 
 	if (0 == self->rows.values_num)
@@ -2529,51 +2471,59 @@ int	zbx_db_insert_execute(zbx_db_insert_t *self)
 	}
 	zbx_chrcpy_alloc(&sql_command, &sql_command_alloc, &sql_command_offset, ')');
 
+	contexts = (zbx_db_bind_context_t *)zbx_malloc(NULL, sizeof(zbx_db_bind_context_t) * self->fields.values_num);
+
+retry_oracle:
 	DBstatement_prepare(sql_command);
 
-	for (i = 0; i < self->rows.values_num; i++)
+	for (j = 0; j < self->fields.values_num; j++)
 	{
-		zbx_db_value_t	*values = (zbx_db_value_t *)self->rows.values[i];
+		field = (ZBX_FIELD *)self->fields.values[j];
 
-		if (SUCCEED == zabbix_check_log_level(LOG_LEVEL_DEBUG))
+		if (ZBX_DB_OK > zbx_db_bind_parameter_dyn(&contexts[j], j, field->type,
+				(zbx_db_value_t **)self->rows.values, self->rows.values_num))
 		{
+			for (i = 0; i < j; i++)
+				zbx_db_clean_bind_context(&contexts[i]);
+
+			goto out;
+		}
+	}
+
+	if (SUCCEED == zabbix_check_log_level(LOG_LEVEL_DEBUG))
+	{
+		for (i = 0; i < self->rows.values_num; i++)
+		{
+			zbx_db_value_t	*values = (zbx_db_value_t *)self->rows.values[i];
 			char	*str;
 
 			str = zbx_db_format_values((ZBX_FIELD **)self->fields.values, values, self->fields.values_num);
 			zabbix_log(LOG_LEVEL_DEBUG, "insert [txnlev:%d] [%s]", zbx_db_txn_level(), str);
 			zbx_free(str);
 		}
-
-		for (j = 0; j < self->fields.values_num; j++)
-		{
-			const zbx_db_value_t	*value = &values[j];
-
-			field = self->fields.values[j];
-
-			switch (field->type)
-			{
-				case ZBX_TYPE_CHAR:
-				case ZBX_TYPE_TEXT:
-				case ZBX_TYPE_SHORTTEXT:
-				case ZBX_TYPE_LONGTEXT:
-					DBbind_parameter(j + 1, (void *)value->str, field->type);
-					break;
-				default:
-					DBbind_parameter(j + 1, (void *)value, field->type);
-					break;
-			}
-
-			if (0 != zbx_db_txn_error())
-			{
-				zabbix_log(LOG_LEVEL_ERR, "failed to bind field: %s", field->name);
-				goto out;
-			}
-		}
-		if (ZBX_DB_OK > DBstatement_execute())
-			goto out;
-
 	}
-	ret = SUCCEED;
+
+	rc = zbx_db_statement_execute(self->rows.values_num);
+
+	for (j = 0; j < self->fields.values_num; j++)
+		zbx_db_clean_bind_context(&contexts[j]);
+
+	if (ZBX_DB_DOWN == rc)
+	{
+		if (0 < tries++)
+		{
+			zabbix_log(LOG_LEVEL_ERR, "database is down: retrying in %d seconds", ZBX_DB_WAIT_DOWN);
+			connection_failure = 1;
+			sleep(ZBX_DB_WAIT_DOWN);
+		}
+
+		DBclose();
+		DBconnect(ZBX_DB_CONNECT_NORMAL);
+
+		goto retry_oracle;
+	}
+
+	ret = (ZBX_DB_OK == rc ? SUCCEED : FAIL);
 
 #else
 	DBbegin_multiple_update(&sql, &sql_alloc, &sql_offset);
@@ -2663,6 +2613,8 @@ out:
 #	ifdef HAVE_MYSQL
 	zbx_free(sql_values);
 #	endif
+#else
+	zbx_free(contexts);
 #endif
 	return ret;
 }
